--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 </head>
     <body class="mainbody">
     <h1 class="mainh1">Ultra corp retailers</h1>
+    <h2 class="mainh2">Best place to find cheap and good quality cellphones</h2>
     <div class="container">
         <div class="row">
             <div class="col-md-3">
