--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="config/stylesheets/style1.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 
-    <title>Title</title>
+    <title>Mobile web assign2</title>
 </head>
     <body class="mainbody">
     <h1 class="mainh1">Ultra corp retailers</h1>
